Finalyzed after fixing some problems

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ ALLOWED_HOSTS=127.0.0.1,localhost,192.168.100.118
 # -----------------------------
 # 🗄️ Database
 # -----------------------------
-# DATABASE_URL=postgresql://postgres:ihsan@250@localhost:5432/taskmanager
-DATABASE_URL=postgresql://postgres:FuZumvgSfGcxGRRQIxPJPKBpvtrNlrUR@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:ihsan@250@localhost:5432/taskmanager
+# DATABASE_URL=postgresql://postgres:FuZumvgSfGcxGRRQIxPJPKBpvtrNlrUR@postgres.railway.internal:5432/railway
 # this is for local Database
 # DATABASE_URL=postgresql://postgres:FuZumvgSfGcxGRRQIxPJPKBpvtrNlrUR@postgres.railway.internal:5432/railway
 #AND THIS IS FOR RAILWAY DATABASE CONNECTION
